Fix: Fix responsive bug on mobile

--- a/styles.css
+++ b/styles.css
@@ -1,14 +1,16 @@
 @import url("https://fonts.googleapis.com/css2?family=Montserrat:wght@300;400;500;700&display=swap&family=Roboto+Slab:wght@300;400;500;700&display=swap");
 
-
 * {
     box-sizing: border-box;
 }
 
-
 body {
     font-family: "Montserrat", sans-serif;
-    background-image: linear-gradient(to bottom right,rgba(154, 147, 16, 0.573), rgba(34, 44, 1, 0.852));
+    background-image: linear-gradient(
+        to bottom right,
+        rgba(154, 147, 16, 0.573),
+        rgba(34, 44, 1, 0.852)
+    );
     /* we need height for align items to work*/
     overflow: hidden;
 }
@@ -25,8 +27,8 @@ main {
 }
 
 h1 {
-    font-family: "roboto slab",serif;
-    color:#fbff00;
+    font-family: "roboto slab", serif;
+    color: #fbff00;
     font-size: 2.5rem;
 }
 
@@ -51,7 +53,7 @@ h1 {
 
 .panel.active {
     flex: 7;
-    box-shadow: 5px 5px 15px 5px #464629
+    box-shadow: 5px 5px 15px 5px #464629;
 }
 
 .panel h3 {
@@ -66,14 +68,12 @@ h1 {
     opacity: 0;
     text-align: center;
     padding: 0.3rem 0.5rem;
-    
 }
 
 .panel.active h3 {
     opacity: 1;
     transition: opacity 1s;
     transition-delay: 0.5s;
-
 }
 
 .panel p {
@@ -95,14 +95,13 @@ h1 {
     display: none;
 }
 
+@media (max-width: 568px) {
+    h1 {
+        margin-top: 0;
+        font-size: 1rem;
+        text-align: center;
+    }
 
-@media (max-width: 568px){
-   h1 {
-    margin-top: 0;
-    font-size: 1rem;
-    text-align: center;
-   }
-   
     .container {
         width: 100vw;
         height: 90vh;
@@ -112,9 +111,8 @@ h1 {
         display: none;
         border-radius: 8px;
         height: 35vh;
-        background-size:contain;
+        background-size: contain;
     }
-
 
     .panel h3 {
         text-align: center;
@@ -122,20 +120,25 @@ h1 {
         padding: 0 0 0 0;
         left: 10px;
         bottom: 0;
+        opacity: 0;
+
         /* color: rgb(0, 255, 229); */
-        
+
         font-size: 1rem;
     }
-    
+
     .panel.active p {
         font-size: 1rem;
         /* color: red; */
         left: 10px;
     }
+    .panel.active p {
+        opacity: 100;
+    }
 
-    
     .panel.active {
         display: block;
+        opacity: 1;
     }
     .hidden {
         display: none;
@@ -146,8 +149,8 @@ h1 {
         flex-direction: row;
         justify-content: center;
         gap: 15px;
-        margin-bottom: 30px;
-    
+        position: absolute;
+        bottom: 5%;
     }
 
     .navigate-btn {
@@ -156,6 +159,4 @@ h1 {
         font-weight: 400px;
         /* position: absolute; */
     }
-
-
 }
